# sla-fw

./: MANIFEST.in  cz.prusa3d.virtual-sla.conf  integrationtest.sh  make_version.sh  pylint.sh  setup.py
doc/: api.rst  errors.rst  (+3 more)
sla-fw/: Dockerfile  README.md  build_sim.sh  builddoc.sh  menutest.py  mypy.sh  remote_install.sh  remote_sync.sh  requirements.txt  runner.sh  setup.cfg  unittest.sh  updates.json.example
sla-fw/doc/: conf.py  config0.rst  exposure0.rst  index.rst  standard0.rst
sla-fw/slafw/: .gitignore  hardware.cfg  libUvLedMeterMulti.py  logger_config.py  main.py
sla-fw/slafw/admin/: base_menu.py  items.py  menu.py  safe_menu.py
sla-fw/slafw/api/: decorators.py  devices.py  examples0.py  exposure0.py  printer0.py  wizard0.py
sla-fw/slafw/configs/: common.py  json.py  project.py  toml.py  unit.py
sla-fw/slafw/data/: VIRTUAL  heatmap_palette.txt  slicer_profiles.toml
sla-fw/slafw/errors/: tests.py
sla-fw/slafw/exposure/: exposure.py  persistence.py  profiles.py  traceable_collections.py
sla-fw/slafw/functions/: files.py  miscellaneous.py  system.py
sla-fw/slafw/hardware/: fan.py  printer_model.py  profiles.py  uv_led.py
sla-fw/slafw/image/: cairo.py  exposure_image.py  preloader.py  resin_calibration.py
sla-fw/slafw/motion_controller/: sl1_controller.py  value_checker.py
sla-fw/slafw/project/: bounding_box.py  functions.py
sla-fw/slafw/scripts/: export_logs.sh  flashMC.sh  truncate_logs.sh
sla-fw/slafw/slicer/: profile_downloader.py
sla-fw/slafw/state_actions/: manager.py
sla-fw/systemd/: slafw-tmpfiles.conf  slafw.service
(+256 files in other folders)
