# This file is part of the SLA firmware
# Copyright (C) 2023 Prusa Research s.r.o. - www.prusa3d.com
# SPDX-License-Identifier: GPL-3.0-or-later

[metadata]
name = slafw
version = attr: slafw.__package_version__
url = https://gitlab.com/prusa3d/sl1/sla-fw
license = GNU General Public License v3 or later (GPLv3+)
classifiers =
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)

[options]
packages = find:
scripts = slafw/main.py
python_requires = >=3.9, <4

[options.package_data]
* =
	data/*
	data/*/*

# TODO data_files is obsolete -> move files to Yocto repository
[options.data_files]
/usr/share/slafw/scripts =
	slafw/scripts/export_logs.sh
	slafw/scripts/flashMC.sh
	slafw/scripts/truncate_logs.sh
/etc/sl1fw =
	slafw/hardware.cfg
	slafw/slafw-logger.json
/usr/lib/systemd/system = systemd/slafw.service
/usr/lib/tmpfiles.d/ = systemd/slafw-tmpfiles.conf
/usr/share/dbus-1/system.d = dbus/cz.prusa3d.sl1.conf
